apply plugin: 'java'
apply plugin: 'maven-publish'

group = 'net.azureaaron'
version = '1.1.0'

repositories {
    mavenCentral()
}

java {
	withSourcesJar()
	
	sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-modules=jdk.internal.vm.ci",
        "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.code=jvmci",
        "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.site=jvmci",
        "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot=jvmci",
        "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.meta=jvmci",
        "--add-exports=jdk.internal.vm.ci/jdk.vm.ci.runtime=jvmci"
    ]
}

publishing {
	publications {
		maven(MavenPublication) {
			from components.java
		}
	}
}